--- a/src/assets/scss/_traffic.scss
+++ b/src/assets/scss/_traffic.scss
@@ -20,8 +20,9 @@
     height: 80%;
     width: calc(70% - 4rem);
     border-radius: 10pt;
-    box-shadow: 1pt 1pt 5pt rgba($black, .3);
     overflow: hidden;
+    -webkit-transform: translateZ(0);
+    box-shadow: 1pt 1pt 5pt rgba($black, .3);
     iframe {
       width: 100%;
       height: 100%;
